test/pass/exceptions/catch_use_traceback.lily
try:
    raise ValueError("")
except ValueError as e:
    var v = e.traceback[0].split(":")[-1]
