test/fail/lambdas/lambda_raise.lily
#[
SyntaxError: 'raise' not allowed in a lambda.
    from lambda_raise.lily:6:
]#

var v = (|| raise ValueError("") )
